5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1807_2572.log
== TEST (2019-06-10 21:27:39) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0);
		b=b+1
c=zeros(b, dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=a[i]
		d=d+1
print(c)		
-- ERROR:
File "XXXX", line 5
    if(a[i]%2!=0);
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 21:27:51) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(b, dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=a[i]
		d=d+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 21:28:33) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(b, dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=a[i]
		d=d+1
print(c)		
-- EXECUTION TIME:
0.957821
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
